@@ -116,6 +116,9 @@ Release 2.8.0 - UNRELEASED
     HDFS-9107. Prevent NN's unrecoverable death spiral after full GC.
     (Daryn Sharp via Colin P. McCabe)
 
+    HDFS-9273. ACLs on root directory may be lost after NN restart.
+    (Xiao Chen via cnauroth)
+
 Release 2.7.2
 
   INCOMPATIBLE CHANGES
